# agent

./: .gitignore  CLAUDE.md  README.md  agent-manager.sh  agent.py  api_client.py  api_manager.py  clean_manager.py  config.yaml  hardware_analyzer.py  pyproject.toml
core/: __init__.py
core/api/: __init__.py  client.py
core/cli/: __init__.py  main.py
core/cli/tui/: app.py
core/cli/tui/widgets/: __init__.py  container_table.py  gpu_monitor.py  status.py
core/models/: __init__.py  config.py  hardware.py  metrics.py  task.py
core/services/: __init__.py  agent.py  container.py  handlers.py  hardware.py  metrics_collector.py
core/utils/: __init__.py  logging.py
