[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[project]
name = "gpugo-agent"
version = "2.0.0"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = [
    "psutil>=7.1.0",
    "httpx>=0.28.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "typer>=0.15.0",
    "textual>=3.0.0",
    "loguru>=0.7.0",
    "nvitop==1.6.1",
]

[project.scripts]
gpugo = "core.cli.main:main"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
preview = true

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM", "C4"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["core"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
